--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,23 @@ org.gradle.jvmargs=-Xmx1536m
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+libraryName=androidPms
+libraryDescription=android测试发布厂库
+
+publishedGroupId=io.github.haiyangcode
+artifact=androidPms
+libraryVersion=0.0.1
+
+siteUrl=https://github.com/HaiYangCode/AndroidPms
+gitUrl=https://github.com/HaiYangCode/AndroidPms
+developerId=yanghai0523
+developerName=yanghai0523
+developerEmail=yanghai0523@gmail.com
+
+
+
+licenseName=The Apache Software License, Version 2.0
+licenseUrl=http://www.apache.org/licenses/LICENSE-2.0.txt
+allLicenses=["Apache-2.0"]
+
